[tool.poetry]
name = "sip-goal-planner"
version = "0.1.0"
description = "Simple SIP goal‑planning helper with tax‑on‑withdrawal and auto‑plots"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
matplotlib = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
